objects/QualificationDoctor__c.object
<CustomObject>
    <label>Qualifikation Arzt</label>
    <nameField>
        <label>Competence Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualifikationen Arzt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Dies ist nur für &apos;Vertretung Arzt&apos; möglich</errorMessage>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Substitute Doctor, Recruitment Doctor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Qualification Doctor</relationshipLabel>
        <relationshipName>Qualifications_Doctor</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedicalDiscipline__c</fullName>
        <description>NEW Field for speciality
Because the old field don&apos;t use the global value set.
Robin S. 20.06.2019</description>
        <label>Ⓜ️ Medical Discipline</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachbereich</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>QualificationLevel__c</fullName>
        <label>Ⓜ️ Qualification Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assistenzarzt</fullName>
                </value>
                <value>
                    <fullName>Facharzt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdditionalDesignations__c</fullName>
        <label>Additional Designations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zusatzbezeichnung</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Combine_Spec_Position__c</fullName>
        <description>Combination of Position and Speciality. Is used for DLRS and Opportunity automatic Name process.
Robin S. 26.02.2019</description>
        <formula>Text(QualificationLevel__c) &amp; &quot;_&quot; &amp;  Text( MedicalDiscipline__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Combine Spec.&amp;Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalQualifications__c</fullName>
        <label>Technical Qualifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachkunde</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Count_for_Opportunity_rollup__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This field is used for the dlrs and opportunity automatic naming process. 
Robin S. 26.02.2019</description>
        <label>[T] Count for Opportunity rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Only_one_QualifcationDocotor_per_Opp</fullName>
        <active>false</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; Isnew() &amp;&amp; 
Opportunity__r.T_Number_of_Qualification_Doctor__c  &gt; 3</errorConditionFormula>
        <errorMessage>You may not deposit more than four Doctor Qualification per opportunity. If you would like to add another doctor qualification, please create another opportunity.</errorMessage>
    </validationRules>
</CustomObject>